--- a/_config.yml
+++ b/_config.yml
@@ -423,10 +423,19 @@ changyan:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: googleaad76ff7844c797c.html
 
 # Google Analytics
-#google_analytics:
+google_analytics: 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110331043-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110331043-1');
+</script>
+
 
 # Yandex Webmaster tools verification setting
 # See: https://webmaster.yandex.ru/
